--- a/esplay-can-os/CMakeLists.txt
+++ b/esplay-can-os/CMakeLists.txt
@@ -2,6 +2,6 @@
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.5)
 
-set(EXTRA_COMPONENT_DIRS ./components/esplay-drivers)
+set(EXTRA_COMPONENT_DIRS ./components/drivers)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(esplay_canos)
